[project]
name = "browserads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drissionpage>=4.1.1.2",
    "httpx[socks]>=0.28.1",
    "pydantic>=2.11.9",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
